data/derived/comb/progs/unify/prog6467.ml.out
Characters 54-67:
  |(h::t)->listReverse t@h::[];;
           ^^^^^^^^^^^^^
Error: This expression has type int but an expression was expected of type
         'a list
